--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>module 3</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="bg_wrapper">
+        <div class="wrapper">
+            <h1>Module-3</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias possimus tempora, dolorum debitis facere ex laudantium ab. Perspiciatis, pariatur libero!</p>
+        </div>
+    </div>
 </body>
 </html>
