--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 <body>
     <div class="bg_wrapper">
         <div class="wrapper">
-            <h1>Module-3</h1>
+            <h1>b - 1</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias possimus tempora, dolorum debitis facere ex laudantium ab. Perspiciatis, pariatur libero!</p>
+        </div>
+        <div class="wrapper">
+            <h1>b - 2</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias possimus tempora, dolorum debitis facere ex laudantium ab. Perspiciatis, pariatur libero!</p>
+        </div>
+        <div class="wrapper">
+            <h1>b - 3</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias possimus tempora, dolorum debitis facere ex laudantium ab. Perspiciatis, pariatur libero!</p>
         </div>
     </div>
